Update dependencies and plugins
- Add the maven-dependency-plugin plugin
- Update log4j-api, log4j-core, log4j-jul and log4j-slf4j-impl dependencies to 2.24.1
- Update the junit-jupiter dependency to 5.11.2
- Update mockito-core and mockito-junit-jupiter dependencies to 5.14.1
- Update pmd-core and pmd-java dependencies to 7.6.0
- Update the maven-javadoc-plugin plugin to 3.10.1
- Update the maven-gpg-plugin plugin to 3.2.7