@@ -114,31 +114,31 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.24.0</version>
+			<version>2.24.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.24.0</version>
+			<version>2.24.1</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-jul</artifactId>
-			<version>2.24.0</version>
+			<version>2.24.1</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>2.24.0</version>
+			<version>2.24.1</version>
 			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
-			<version>5.11.1</version>
+			<version>5.11.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -150,13 +150,13 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.13.0</version>
+			<version>5.14.1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-junit-jupiter</artifactId>
-			<version>5.13.0</version>
+			<version>5.14.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -229,12 +229,12 @@
 					<dependency>
 						<groupId>net.sourceforge.pmd</groupId>
 						<artifactId>pmd-core</artifactId>
-						<version>7.5.0</version>
+						<version>7.6.0</version>
 					</dependency>
 					<dependency>
 						<groupId>net.sourceforge.pmd</groupId>
 						<artifactId>pmd-java</artifactId>
-						<version>7.5.0</version>
+						<version>7.6.0</version>
 					</dependency>
 				</dependencies>
 				<configuration>
@@ -243,6 +243,19 @@
 					<includeTests>true</includeTests>
 					<verbose>true</verbose>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.8.0</version>
+				<executions>
+					<execution>
+						<id>dependency-properties</id>
+						<goals>
+							<goal>properties</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -262,7 +275,7 @@
 				<version>3.5.0</version>
 				<configuration>
 					<!--suppress UnresolvedMavenProperty -->
-					<argLine>${argLine} -Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
+					<argLine>${argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -285,7 +298,7 @@
 				</executions>
 				<configuration>
 					<!--suppress UnresolvedMavenProperty -->
-					<argLine>${argLine} -Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
+					<argLine>${argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
 					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
 				</configuration>
 			</plugin>
@@ -357,7 +370,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.10.0</version>
+				<version>3.10.1</version>
 				<executions>
 					<execution>
 						<id>javadoc-jar</id>
@@ -451,7 +464,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
-				<version>3.2.6</version>
+				<version>3.2.7</version>
 				<executions>
 					<execution>
 						<id>gpg-sign</id>
